--- a/index.html
+++ b/index.html
@@ -204,9 +204,15 @@
                 </div>
 
             </div>
-            <div id="card-element">
-                <!-- A Stripe Element will be inserted here. -->
-            </div>
+            <form id="'payment-form'">
+                <div id="card-element">
+                    <!-- A Stripe Element will be inserted here. -->
+                </div>
+                <button id="submit" type="submit">
+                    Validez
+                </button>
+            </form>
+
         </section>
     </div>
 
